# bazel-things

./: .gitignore  README.md
commondeps/cats/: BUILD.bazel
commondeps/circe/: BUILD.bazel
commondeps/doobie/: BUILD.bazel
commondeps/fs2/: BUILD.bazel
commondeps/http4s/: BUILD.bazel
commondeps/log4cats/: BUILD.bazel
commondeps/munit/: BUILD.bazel
commondeps/natchez/: BUILD.bazel
dependencies/: dependencies.bzl  init.bzl  third_party.bzl
depgen/: depgen.py
doze/: BUILD.bazel  doze.sh
flagcfg/: BUILD.bazel
flags/: flags.bzl
metals-config/: BUILD.bazel  find_deps.py  invoke.sh  write_bloop_config.py
template/: new_project.sh
testing/: junit_suite.bzl
toolchain/: BUILD.bazel  development_toolchain.bzl
toolchain/base/: BUILD.bazel
toolchain/development/: BUILD.bazel
toolchain/production/: BUILD.bazel
toolchain/strict/: BUILD.bazel
