# //toolchains/BUILD
load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")

scala_toolchain(
    name = "toolchain-scala_toolchain",
    dependency_mode = "plus-one",
    scalacopts = [
                "-encoding",
                "UTF-8",
                "-feature",
                "-unchecked",
                "-deprecation",
                "-language:existentials",
                "-language:higherKinds",
                "-language:implicitConversions",
            ],
    visibility = ["//visibility:public"],
    strict_deps_mode = "error",
    unused_dependency_checker_mode = "error", 
    dependency_tracking_method = "high-level",
)

toolchain(
    name = "toolchain",
    toolchain = "toolchain-scala_toolchain",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)
