load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

munit_effect_deps = [
    "@maven//:org_typelevel_cats_core_2_13",
    "@maven//:org_typelevel_cats_effect_2_13",
    "@maven//:org_typelevel_cats_effect_kernel_2_13",
    "@maven//:org_typelevel_cats_effect_std_2_13",
    "@maven//:org_typelevel_cats_kernel_2_13",
    "@maven//:org_scalameta_munit_2_13",
]

scala_library(
    name = "munit_effect",
    visibility = ["//visibility:public"],
    deps = munit_effect_deps,
    exports = ["@maven//:org_typelevel_munit_cats_effect_3_2_13"]
)
