load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

munit_effect_deps = [
    "@maven//:org_scala_lang_scala_library",
    "//commondeps/cats:cats",
    "//commondeps/cats:cats_effect",
    "@maven//:org_scalameta_munit_2_13",
]

scala_library(
    name = "munit_effect",
    visibility = ["//visibility:public"],
    deps = munit_effect_deps,
    exports = ["@maven//:org_typelevel_munit_cats_effect_3_2_13"]
)
