# //toolchains/BUILD
load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")

scala_toolchain(
    name = "production-scala_toolchain",
    #dependency_mode = "direct",
    scalacopts = [
                "-encoding",
                "UTF-8",
                "-feature",
                "-unchecked",
                "-Xfatal-warnings",
                "-deprecation",
                "-language:existentials",
                "-language:higherKinds",
                "-language:implicitConversions",
                "-Ywarn-dead-code",
                "-Ywarn-numeric-widen",
                "-Ywarn-value-discard",
                "-Xlint:-unused,_",
                "-Ywarn-unused:imports",
                "-Yrangepos",
                "-Xlint:-byname-implicit"
            ],
    #strict_deps_mode = "error",
    #unused_dependency_checker_mode = "error",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "production",
    toolchain = "production-scala_toolchain",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

## DEP CHECKER

scala_toolchain(
    name = "dep-production-scala_toolchain",
    dependency_mode = "direct",
    scalacopts = [
                "-encoding",
                "UTF-8",
                "-feature",
                "-unchecked",
                #"-Xfatal-warnings",
                "-deprecation",
                "-language:existentials",
                "-language:higherKinds",
                "-language:implicitConversions",
                #"-Ywarn-dead-code",
                #"-Ywarn-numeric-widen",
                #"-Ywarn-value-discard",
                #"-Xlint:-unused,_",
                #"-Ywarn-unused:imports",
                "-Yrangepos",
            ],
    strict_deps_mode = "error",
    unused_dependency_checker_mode = "error",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "dep-production",
    toolchain = "dep-production-scala_toolchain",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)
